<resources>
    <string name="app_name">Mesh Messaging</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="crypto">Encrypt/Decrypt</string>
    <string name="advertise">BLE Advertise</string>
    <string name="discover">BLE Discover</string>
    <string name="read">Read Message</string>
    <string name="pfelgamal">Benchmark PF Elgamal</string>
    <string name="ecelgamal_bc">Benchmark EC Elgamal (BC)</string>
    <string name="ecelgamal_n">Benchmark EC Elgamal (Neil)</string>
    <string name="ecelgamal_c">Benchmark EC Elgamal (C)</string>
    <string name="ble_uuid">CDB7950D-73F1-4D4D-8E47-C090502DBD63</string>
</resources>
